third_party/move/move-compiler-v2/tests/unit_test/test/named_address_no_value_in_annotation.exp

Diagnostics:
error: address with no value
  ┌─ tests/unit_test/test/named_address_no_value_in_annotation.move:2:18
  │
2 │     #[test(_a = @UnboundAddr)]
  │                  ^^^^^^^^^^^ address 'UnboundAddr' is not assigned a value. Try assigning it a value when calling the compiler
